@@ -1,3 +1,10 @@
+2006-01-22  Jean-François Rameau  <jframeau@cvs.gnome.org>
+	
+	* src/ephy-dbus.c: (ephy_dbus_shutdown):
+
+	Remove both session/system filters before finalizing EphyDbus object.
+	Fix #327845.
+
 2006-01-22  Peter Harvey  <peter.a.harvey@gmail.com>
 
 	* src/bookmarks/ephy-bookmark-action.c
